--- a/lemon-shop/src/manifest.json
+++ b/lemon-shop/src/manifest.json
@@ -49,6 +49,12 @@
   },
   /* 快应用特有相关 */
   "quickapp": {},
+  /* 网页端特有配置 */
+  "h5": {
+    "router": {
+      "base": "./"
+    }
+  },
   /* 小程序特有相关 */
   "mp-weixin": {
     "appid": "wxec59437db387deea",
